# trace-ai

./: .env.example  .gitignore  PROPOSAL.md  README.md  pyproject.toml  rxconfig.py
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  CAPABILITY_ASSESSMENT.md  CLEANUP_RECOMMENDATIONS.md  CONVERSATION_SUMMARY.md  DEMO_RESULTS.md  MAINFRAME_INTEGRATION.md  MEMORY_ARCHITECTURE.md  PHASE_10_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_12_SUMMARY.md  PHASE_8_COMPLETE.md  PHASE_9_SUMMARY.md  QUICK_START.md  REALISTIC_SCENARIOS.md  SCALABILITY.md  SCALABILITY_TEST_PLAN.md  SUMMARY_ADVANCED_FEATURES.md  TESTING.md  WEBUI.md  WORKBOARD.md
examples/: AI_DEMO.md  README.md  README_OLD.md  ai_demo.py  complex_etl_demo.py  comprehensive_test.py  generate_mainframe_data.py  quick_agent_test.py  quick_demo.py  rich_example.py  sample_etl_config.json  test_new_features.py  test_parsers_only.py  transparent_demo.py
examples/inputs/cobol/: BILL002.cbl  BILL005.cbl  BILL006.cbl  CUST001.cbl  CUST003.cbl  CUST005.cbl  FIN002.cbl  FIN004.cbl  PAY006.cbl  SALE003.cbl  SALE004.cbl  SALE006.cbl
examples/inputs/csv/: lineage.csv  lineage_mapping.csv  sample_lineage_mapping.csv
examples/inputs/excel/: report.xlsx
examples/inputs/jcl/: DAILYBIL.jcl  DAILYFIN.jcl  DAILYPAY.jcl  MNTHBIL.jcl  MNTHFIN.jcl  MNTHPAY.jcl  WKLYFIN.jcl  WKLYINV.jcl
examples/inputs/json/: pipeline.json  sales_pipeline.json
examples/inputs/ssis/: SalesAggregation.dtsx
examples/sample_databases/: create_sample_dbs.py  customer.db  employee.db  inventory.db  sales.db
examples/sample_packages/: CustomerETL.dtsx
examples/scripts/: async_vs_sync_demo.py  comprehensive_test.py  middleware_demo.py  my_demo.py  planning_demo.py  progress_tracking_test.py  progress_unit_test.py  quick_agent_test.py  quick_demo.py  test_parsers_only.py  transparent_demo.py
src/enterprise_assistant/: config.py  logger.py
src/enterprise_assistant/agents/: __init__.py  enterprise_agent.py  middlewares.py
src/enterprise_assistant/cli/: interactive.py
src/enterprise_assistant/graph/: builder.py  queries.py  schema.py  storage.py
src/enterprise_assistant/memory/: __init__.py  conversation_store.py  vector_store.py
src/enterprise_assistant/parsers/: __init__.py  (+7 more)
src/traceai/: logger.py
test_data/: report.xlsx  sales_report.xlsx
tests/: test_ai_integration.py  test_all_parsers.py  test_async_enterprise_agent.py  test_async_traceai_agent.py  test_capability_plugin.py  test_code_generation.py  test_comprehensive_summary.py  test_enterprise_agent.py  test_graph.py  test_graph_tools.py  test_memory_stores.py  test_middlewares.py  test_performance.py  test_real_scenarios.py  test_ssis_parser.py  test_traceai_agent.py  test_visualization.py
traceai_webui/: traceai_webui.py
(+64 files in other folders)
